blue-margin/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: blue
  namespace: margin
spec:
  type: NodePort
  selector:
    app: blue
  ports:
  - port: 80
