blue-margin/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: blue
  namespace: feature-margin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: feature-margin.localhost
    http:
      paths:
      - path: /blue
        backend:
          serviceName: blue
          servicePort: 80
